fixed the spacing and layout of the right panels and user legend

--- a/css/style.css
+++ b/css/style.css
@@ -58,12 +58,6 @@
   width: 200px;
 }
 
-.RightOpts /*Sriram: added this to edit right info options*/
-{
-  border-top: 1px solid;
-  border-bottom: 1px solid;
-}
-
 .InfoBoxContainer
 {
   padding-top: 0px;
@@ -77,8 +71,11 @@
 
 .RightOpts
 {
+  border-top: 1px solid;
+  border-bottom: 1px solid;
   margin-left: 10px;
-  height: 385px;
+  /* height: 385px; */
+  height: 370px;
 }
 
 .LeftOpts
@@ -110,7 +107,9 @@
 
 .opt /*Sriram: Adds additional padding to the individual options */
 {
-  padding-left:5px; 
+  padding-left:5px;
+  padding-top:2px;
+  clear: both;
 }
 
 #LeftOptPanel/*Sriram: Adds additional padding to the left panel*/
